# data-api-emulator

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  model.rs
tests/: integration.rs
