[package]
name = "data-api-local"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"

actix-rt = "0.2.2"
actix-web = "2.0.0-alpha.1"
actix-files = "0.1.1"
actix-session = "0.2.0"

bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

mysql = "17.0.0"

rand="0.7.2"
twox-hash="1.1.0"
